--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.7",
     "nx": "15.0.4",
+    "postcss": "^8.4.21",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0",
@@ -85,8 +86,8 @@
     "stylelint-config-sass-guidelines": "^9.0.1",
     "stylelint-config-standard-scss": "^6.1.0",
     "stylelint-selector-bem-pattern": "^2.1.1",
-    "typescript": "~4.9.4",
+    "typescript": "~4.9.5",
     "zone.js": "~0.11.8"
   },
-  "packageManager": "yarn@3.3.0"
+  "packageManager": "yarn@3.4.1"
 }
