--- a/packages/web/angular.json
+++ b/packages/web/angular.json
@@ -3,9 +3,7 @@
   "cli": {
     "packageManager": "yarn",
     "cache": { "enabled": false },
-    "schematicCollections": [
-      "@angular-eslint/schematics"
-    ],
+    "schematicCollections": ["@angular-eslint/schematics"],
     "analytics": false
   },
   "version": 1,
@@ -67,7 +65,7 @@
               }
             ],
             "styles": ["src/styles.scss"],
-            "scripts": [],
+            "scripts": ["./node_modules/@elvia/elvis/elvis.js"],
             "vendorChunk": true,
             "extractLicenses": false,
             "buildOptimizer": false,
