--- a/packages/elvis/package.json
+++ b/packages/elvis/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@elvia/elvis-assets-icons": "*",
     "@elvia/elvis-colors": "^1.7.0",
-    "@elvia/elvis-typography": "2.3.2",
+    "@elvia/elvis-typography": "^2.3.2",
     "bootstrap": "4.6.1",
     "jquery": "1.9.1 - 3",
     "popper.js": "^1.16.1"
