--- a/packages/elvis/package.json
+++ b/packages/elvis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis",
-  "version": "10.6.0",
+  "version": "11.0.0",
   "description": "Elvia design system",
   "license": "ISC",
   "homepage": "https://design.elvia.io/",
@@ -13,6 +13,7 @@
   },
   "files": [
     "elvis.js",
+    "elvis.full.js",
     "CHANGELOG.json",
     "README.md",
     "css/**/*",
@@ -20,7 +21,7 @@
   ],
   "dependencies": {
     "@elvia/elvis-assets-icons": "*",
-    "@elvia/elvis-colors": "^1.7.0",
+    "@elvia/elvis-colors": "^1.8.0",
     "@elvia/elvis-typography": "^2.3.2",
     "bootstrap": "4.6.1",
     "jquery": "1.9.1 - 3",
@@ -32,6 +33,7 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.2.0",
+    "gulp-minify": "^3.1.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-tap": "^2.0.0",
