--- a/packages/components/components/elvis-toast/package.json
+++ b/packages/components/components/elvis-toast/package.json
@@ -6,6 +6,7 @@
   "main": "web_component.js",
   "files": [
     "web_component.js",
+    "web_component.d.ts",
     "react.js",
     "react.d.ts",
     "CHANGELOG.json",
@@ -13,11 +14,11 @@
     "dist/**/*"
   ],
   "dependencies": {
-    "@elvia/elvis-assets-icons": "^2.6.1",
-    "@elvia/elvis-colors": "^1.4.3",
-    "@elvia/elvis-component-wrapper": "^4.0.0",
-    "@elvia/elvis-toolbox": "^7.7.0",
-    "@elvia/elvis-typography": "^2.3.1",
+    "@elvia/elvis-assets-icons": "^2.11.0",
+    "@elvia/elvis-colors": "^1.8.0",
+    "@elvia/elvis-component-wrapper": "^4.0.1",
+    "@elvia/elvis-toolbox": "^7.8.1",
+    "@elvia/elvis-typography": "^2.3.2",
     "styled-components": "^5.3.3"
   },
   "peerDependencies": {
