--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -80,18 +80,15 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/natural-compare-lite": "^1.4.0",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "5.44.0",
-    "@typescript-eslint/parser": "5.44.0",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "babel-eslint": "^10.1.0",
     "contentful-management": "^10.27.2",
     "contentful-typescript-codegen": "^3.4.0",
     "eslint": "^8.23.1",
     "lint-staged": "^13.0.4",
-    "object-path": ">=0.11.5",
     "stylelint": "^10.0.1 || ^11.0.0 || ^12.0.0 || ^13.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "~4.9.5",
-    "webpack": "^5.76.0",
-    "webpack-subresource-integrity": ">=1.5.1"
+    "typescript": "~4.9.5"
   }
 }
