--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -49,6 +49,7 @@
     "@elvia/elvis-spotlight": "portal:../components/components/elvis-spotlight",
     "@elvia/elvis-tabs": "portal:../components/components/elvis-tabs",
     "@elvia/elvis-timepicker": "portal:../components/components/elvis-timepicker",
+    "@elvia/elvis-toast": "portal:../components/components/elvis-toast",
     "@elvia/elvis-toolbox": "portal:../components/components/elvis-toolbox",
     "@elvia/elvis-tooltip": "portal:../components/components/elvis-tooltip",
     "@elvia/elvis-typography": "portal:../elvis-typography",
