--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /tmp
 /out-tsc
 packages/web/src/assets/changelogs
+packages/web/src/typedoc-output.json
 /packages/elvis-assets-icons/icons.js
 /packages/elvis-assets-icons/icons.d.ts
 /packages/elvis-assets-icons/icons.cjs.js
